--- a/README
+++ b/README
@@ -91,6 +91,9 @@ Headers
 ================================================================================
 CHANGES FROM PREVIOUS VERSIONS:
 
+Version 0.3.4
+- Added the SpotRank endpoint
+
 Version 0.3.3
 - Nearby requests can now use the temporal indexes
 
